--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ keywords = ["gamedev", "amethyst", "physics"]
 [dependencies]
 amethyst_core = { version = "0.1.0", git = "https://github.com/amethyst/amethyst", branch = "develop" }
 amethyst_renderer = { version = "0.6.1", git = "https://github.com/amethyst/amethyst", branch = "develop" }
-rhusics-ecs = { version = "0.3", features = ["eders"] }
-rhusics-core = { version = "0.3", features = ["specs", "eders"] }
+rhusics-ecs = { git = "https://github.com/rustgd/rhusics", branch = "master" }
+rhusics-core = { git = "https://github.com/rustgd/rhusics", branch = "master" }
+rhusics-transform = { git = "https://github.com/rustgd/rhusics", branch = "master" }
 specs = "0.10"
 shrev = "0.8"
 collision = { version = "0.15", features = ["eders"]}
